Fix view on small devices

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,6 +1,6 @@
 .catalog {
   display: grid;
-  grid-template-columns: repeat(4, product-card(width));
+  grid-template-columns: repeat(auto-fill, product-card(width));
   justify-content: center;
   gap: product-card(spacing);
   max-width: 944px;
@@ -10,17 +10,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: product-card(width);
     height: product-card(height);
     border: 1px solid #ccc;
     border-radius: 5px;
-  }
-
-  @include respond-to(tablet, desktop) {
-    grid-template-columns: repeat(3, product-card(width));
-  }
-
-  @include respond-to(phone, tablet) {
-    grid-template-columns: repeat(2, product-card(width));
   }
 }
