--- a/src/styles/functions/_functions.scss
+++ b/src/styles/functions/_functions.scss
@@ -1,7 +1,3 @@
-@function breakpoint($resolution) {
-  @return map-get($breakpoints, $resolution);
-}
-
 @function product-card($property) {
   @return map-get($card, $property);
 }
