--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -1,9 +1,3 @@
-$breakpoints: (
-  desktop: 1024px,
-  tablet: 768px,
-  phone: 488px
-);
-
 $card: (
   width: 200px,
   height: 300px,
